// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Services for health kpis constructTimeSeriesQuery should return time series query 1`] = `
"
    query timeseriesKPI(
      $start: DateTime,
      $end: DateTime,
      $granularity: String,
      $filter: FilterInput
      
    ) {
      network(filter: $filter) {
        timeSeries: timeSeries(
          start: $start
          end: $end
          granularity: $granularity
          
        ) {
          time
          data: connectionSuccessAndAttemptCount
        }
      }
    }
  "
`;

exports[`Services for health kpis constructTimeSeriesQuery should return time series query with additional args 1`] = `
"
    query timeseriesKPI(
      $start: DateTime,
      $end: DateTime,
      $granularity: String,
      $filter: FilterInput
      , $enableSwitchFirmwareFilter: Boolean
    ) {
      network(filter: $filter) {
        timeSeries: timeSeries(
          start: $start
          end: $end
          granularity: $granularity
          enableSwitchFirmwareFilter: $enableSwitchFirmwareFilter
        ) {
          time
          data: connectionSuccessAndAttemptCount
        }
      }
    }
  "
`;
